# ContextPilot-Query-Aware-Context-Distillation-for-Efficient-RAG

./: .env.example  .gitignore  README.md  pyproject.toml
contextpilot/: .gitignore
contextpilot/src/contextpilot/: main.py
contextpilot/tests/: test_config.py  test_imports.py
data/raw/: faiss_notes.md  hybrid_retrieval.txt  rag_intro.txt
data/raw/sample_docs/: rag_intro.txt
data/vector_store/faiss/: index.faiss  metadata.pkl
scripts/: ingest_data.py  validate_budgeted_rag.py  validate_chunker.py  validate_loader.py  validate_pipeline.py  validate_raw_rag.py  validate_retriever.py  validate_scorer.py  validate_vector_store.py
src/contextpilot/config/: llm.py  settings.py
src/contextpilot/distillation/: __init__.py  scorer.py
src/contextpilot/generation/: generator.py  prompt_builder.py
src/contextpilot/graph/: __init__.py  pipeline.py
src/contextpilot/ingestion/: chunker.py  loader.py
src/contextpilot/models/: schemas.py
src/contextpilot/retrieval/: retriever.py  vector_store.py
